--- a/style.css
+++ b/style.css
@@ -47,12 +47,12 @@ ul li{list-style: none;}
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 10px;
 }
 
 .acient {
-  width: 200px;
-  height: 260px;
+  width: 220px;
+  height: 280px;
   margin: 10px;
   border-radius: 10px;
 }
@@ -88,10 +88,13 @@ ul li{list-style: none;}
   padding: 10px;
   margin: auto;
   visibility: visible;
+  opacity: 1;
+  transition: 0.8s linear;
 }
 
 .transparent {
   visibility: hidden;
+  opacity: 0;
 }
 
 h2 {
@@ -108,9 +111,7 @@ border: 2px solid rgb(41, 40, 56);
 border-radius: 10px;
 text-align: center;
 padding-top: 10px;
-
 }
-
 
 .complexity:hover {
   border: 2px rgb(31, 30, 44) solid;
@@ -166,34 +167,42 @@ padding-top: 10px;
   color: rgb(157, 151, 185);
   text-transform: uppercase;
   margin: auto;
+  padding: 20px;
 }
 
 .toss-pack {
   width: 41%;
   background-color: rgb(72, 70, 97);
-  height: 40px;
+  height: 45px;
   border: 2px solid rgb(41, 40, 56);
   border-radius: 10px;
   text-align: center;
   margin: auto;
-  padding-top: 10px;
-  margin-top: 20px;
+  padding: 12px;
+  margin-top: 10px;
 }
 
 .card-wrapper {
-  height: 280px;
+  height: 300px;
   display: flex;
   flex-direction: row;
 }
 
 .pack-back {
-  width: 180px;
+  width: 190px;
   margin: 0 auto;
   margin-top: 20px;
 }
 
+.pack-back img:active {
+  border: 1px rgb(61, 52, 158) solid;
+  transform: scale(1.01);
+  box-shadow: inset 1px 1px 2px rgba(154, 147, 140, 0.5), 1px 1px 2px rgba(255, 255, 255, 0.7);
+}
+
+
 .card-face {
-  width: 180px;
+  width: 190px;
   margin: 0 auto;
   margin-top: 20px;
 }
