--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ ul li{list-style: none;}
 
 .acient img {
   width: 100%;
-  height: auto;
+  height: 100%;
   transition: 0.5s;
   border-radius: 10px;
 }
@@ -71,7 +71,7 @@ ul li{list-style: none;}
 .acient:active {
   border: 2px rgb(61, 52, 158) solid;
   transform: scale(1.1);
-  box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), 1px 1px 5px rgba(255, 255, 255, 1);
+  box-shadow: inset 2px 2px 3px rgba(154, 147, 140, 0.5), 1px 1px 3px rgba(255, 255, 255, 1);
 }
 
 .aactive {
